[project]
name = "cookbook"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "google-genai>=1.11.0",
    "ipykernel>=6.29.5",
    "jupyterlab-language-pack-zh-cn>=4.3.post3",
    "loguru>=0.7.3",
    "matplotlib>=3.10.1",
    "numpy>=2.2.4",
    "opencv-python>=4.11.0.86",
    "pillow>=11.2.1",
    "pydantic-settings>=2.8.1",
    "pytz>=2025.2",
]
